--- a/PavloSocial/Base.lproj/Main.storyboard
+++ b/PavloSocial/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -295,7 +295,6 @@
                                                 <constraint firstItem="7f9-DN-bXm" firstAttribute="leading" secondItem="ezX-FC-5LY" secondAttribute="leadingMargin" constant="8" id="3Ax-ib-7sK"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="7f9-DN-bXm" secondAttribute="bottom" id="AHg-n9-Wey"/>
                                                 <constraint firstItem="7f9-DN-bXm" firstAttribute="top" secondItem="ezX-FC-5LY" secondAttribute="topMargin" constant="8" id="K0w-RY-qh5"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="7f9-DN-bXm" secondAttribute="bottom" constant="8" id="POw-3P-Mu7"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="7f9-DN-bXm" secondAttribute="trailing" constant="8" id="j2S-Ib-nho"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -325,8 +324,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="ImageAdd" destination="Arc-xh-1Sb" id="qpq-Bc-IOu"/>
-                        <outlet property="addImageTapped" destination="7dq-KC-gPM" id="8sm-aI-Ol8"/>
+                        <outlet property="imageAdd" destination="ehA-5E-Asn" id="mbm-wy-yFc"/>
                         <outlet property="tableView" destination="dM1-iH-MIL" id="7IL-Xg-3VC"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignIn" id="tMY-lG-gSv"/>
                     </connections>
